manifests/app-1/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-1
    app.kubernetes.io/part-of: loadbalancing-test
  name: app-1
spec:
  ports:
    - name: tcp-8000
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: app-1
    app.kubernetes.io/part-of: loadbalancing-test
    deployment: app-1
